<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/emma_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emma_login_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Campo de entrada para el nombre de usuario -->
    <EditText
        android:id="@+id/emma_username"
        android:layout_width="346dp"
        android:layout_height="57dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/emma_username_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emma_login_title" />

    <!-- Campo de entrada para la contraseña -->
    <EditText
        android:id="@+id/emma_password"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/emma_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emma_username" />

    <!-- Botón para iniciar sesión -->
    <Button
        android:id="@+id/emma_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/emma_login_button"
        app:layout_constraintTop_toBottomOf="@id/emma_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
